add register functionality

--- a/client/layouts/HomeLayout.html
+++ b/client/layouts/HomeLayout.html
@@ -2,7 +2,7 @@
   {{> Header}}
   <main>
     <div class="billboard">
-      <h2>Wait on Line Anywhere you like</h2>
+      <h2>待つことができない人へのNomadoな選択肢</h2>
     </div>
   </main>
 </template>
