--- a/client/partials/Header.html
+++ b/client/partials/Header.html
@@ -1,6 +1,24 @@
 <template name='Header'>
   <header>
-    <h1>Nomadify</h1>
-    {{> loginButtons}}
+    <nav>
+      <div class="nav-wrapper">
+        <div class="container">
+          <a class="brand-logo" href="/">Nomadify</a>
+
+          <ul class="right">
+            <li><a class="dropdown-button" href="#!" data-activates="user-dropdown"><i class="material-icons">assignment_ind</i></a></li>
+          </ul>
+
+          <ul id="user-dropdown" class="dropdown-content">
+            {{#if currentUser}}
+              <li><a href="#" class="logout" data-action="logout">Sign Out</a></li>
+            {{else}}
+              <li><a href="/sign-in">Sign in</a></li>
+              <li><a href="/sign-up">Register</a></li>
+            {{/if}}
+          </ul>
+        </div>
+      </div>
+    </nav>
   </header>
 </template>
