--- a/client/partials/Header.html
+++ b/client/partials/Header.html
@@ -6,7 +6,15 @@
           <a class="brand-logo" href="/">Nomadify</a>
 
           <ul class="right">
-            <li><a class="dropdown-button" href="#!" data-activates="user-dropdown"><i class="material-icons">assignment_ind</i></a></li>
+            <li>
+              <a class="dropdown-button" href="#!" data-activates="user-dropdown">
+                {{#if currentUser}}
+                  <img src="{{userProfile.profile.picture}}"/><span class="name">{{userProfile.profile.name}}</span>
+                {{else}}
+                  <i class="material-icons">assignment_ind</i>
+                {{/if}}
+              </a>
+            </li>
           </ul>
 
           <ul id="user-dropdown" class="dropdown-content">
