--- a/client/partials/Header.html
+++ b/client/partials/Header.html
@@ -9,7 +9,11 @@
             <li>
               <a class="dropdown-button" href="#!" data-activates="user-dropdown">
                 {{#if currentUser}}
-                  <img src="{{userProfile.profile.picture}}"/><span class="name">{{userProfile.profile.name}}</span>
+                  {{#if pictureExist}}
+                    <img src="{{userProfile.picture}}"/><span class="name">{{userProfile.name}}</span>
+                  {{else}}
+                    <i class="material-icons">assignment_ind</i>  
+                  {{/if}}
                 {{else}}
                   <i class="material-icons">assignment_ind</i>
                 {{/if}}
