add h2 to restaurantSignUp

--- a/client/components/RestaurantSignUp.html
+++ b/client/components/RestaurantSignUp.html
@@ -1,5 +1,6 @@
 <template name="RestaurantSignUp">
   <div class="sign-up-form">
+    <h2>レストランを登録</h2>
     {{> quickForm collection="Restaurants" id="insertRestaurantForm" type="insert" class="new-restaurant-form"}}
   </div>
 </template>
