[WIP]subscribe restaurants

--- a/client/partials/Header.html
+++ b/client/partials/Header.html
@@ -12,7 +12,7 @@
                   {{#if pictureExist}}
                   <ul>
                     <li><img src="{{userProfile.picture}}"/></li>
-                    <li><span class="name">{{userProfile.name}}</span></li>
+                    <li>{{userProfile.name}}</li>
                   </ul>
                   {{else}}
                     <i class="material-icons">assignment_ind</i>
