--- a/client/components/Twilio.html
+++ b/client/components/Twilio.html
@@ -1,12 +1,4 @@
 <template name="Twilio">
-  <div class="new-customer-box">
-    <h2>お客様情報</h2>
-    {{> quickForm collection="Customers" id="insertCustomerForm" type="insert" class="new-customer-form"}}
-  </div>
-
+  いらない？
   <button id="call">Call</button>
-
-  <div class="waiting-list">
-    {{> WaittingList}}
-  </div>
 </template>
