--- a/client/components/Restaurant.html
+++ b/client/components/Restaurant.html
@@ -1,3 +1,16 @@
 <template name="Restaurant">
-  <h2>{{myRestaurant.name}}</h2>
+  <div class="restaurant">
+    <div class="card blue-grey darken-1">
+      <a href="{{pathFor '/restaurants/:id/waiting-list' id=_id}}">
+        <div class="card-content white-text">
+          <span class="card-title">{{name}}</span>
+          <p>I am a very simple card. I am good at containing small bits of information.
+          I am convenient because I require little markup to use effectively.</p>
+        </div>
+       </a> 
+      <div class="card-action">
+        <a href="{{url}}" target="_blank">{{url}}</a>
+      </div>
+    </div>
+  </div>
 </template>
