--- a/client/components/SignIn.html
+++ b/client/components/SignIn.html
@@ -1,3 +1,5 @@
 <template name="SignIn">
-  {{> atForm state='signIn'}}
+  <div class="sign-in">
+    {{> atForm state='signIn'}}
+  </div>
 </template>
