--- a/client/components/SignUp.html
+++ b/client/components/SignUp.html
@@ -1,3 +1,5 @@
 <template name="SignUp">
-  {{> atForm state='signUp'}}
+  <div class="sign-up">
+    {{> atForm state='signUp'}}
+  </div>
 </template>
