--- a/client/styles/style.scss
+++ b/client/styles/style.scss
@@ -22,7 +22,7 @@ main {
     font-size: 24px;
     text-align: center;
   }
-  form {
+  .sign-in, .sign-up, restaurant-sign-up, .restaurants {
     width: 30%;
     margin: auto;
   }
