--- a/client/components/WaitingList.html
+++ b/client/components/WaitingList.html
@@ -1,7 +1,7 @@
 <template name="WaitingList">
   <div class="new-customer-box">
     <h2>お客様情報</h2>
-    {{> quickForm collection="Customers" id="insertCustomerForm" type="insert" class="new-customer-form"}}
+    {{> quickForm collection="Customers" id="insertCustomerForm" type="insert" class="new-customer-form" options="allowed"}}
   </div>
 
   <div class="waiting-list">
