--- a/client/styles/style.scss
+++ b/client/styles/style.scss
@@ -26,7 +26,10 @@ main {
     width: 30%;
     margin: auto;
   }
-  .customer {
+  button {
+
+  }
+  .signUp, .signIp, .customer {
     width: 30%;
     margin: auto;
   }
