--- a/client/styles/style.scss
+++ b/client/styles/style.scss
@@ -22,14 +22,7 @@ main {
     font-size: 24px;
     text-align: center;
   }
-  .sign-in, .sign-up, restaurant-sign-up, .restaurants {
-    width: 30%;
-    margin: auto;
-  }
-  button {
-
-  }
-  .signUp, .signIp, .customer {
+  .sign-in, .sign-up, .restaurant-sign-up, .restaurants, .waiting-list,.customer {
     width: 30%;
     margin: auto;
   }
