--- a/client/components/WaitingList.html
+++ b/client/components/WaitingList.html
@@ -1,13 +1,14 @@
 <template name="WaitingList">
-  <div class="new-customer-box">
-    <h2>お客様情報</h2>
-    {{> quickForm collection="Customers" id="insertCustomerForm" type="insert" class="new-customer-form" options="allowed"}}
-  </div>
-
   <div class="waiting-list">
-    <h2>Waiting List</h2>
-    {{#each customers}}
-      {{> Customer}}
-    {{/each}}
+    <div class="new-customer-box">
+      <h2>お客様情報</h2>
+      {{> quickForm collection="Customers" id="insertCustomerForm" type="insert" class="new-customer-form" options="allowed"}}
+    </div>
+    <div>
+      <h2>Waiting List</h2>
+      {{#each customers}}
+        {{> Customer}}
+      {{/each}}
+    </div>
   </div>
 </template>
