change customer shema

--- a/client/components/Customer.html
+++ b/client/components/Customer.html
@@ -6,6 +6,7 @@
           <div class="card-content black-text">
             <span class="card-title">{{ name }}</span>
             <p>{{ numberOfPeople }}人</p>
+            <p>{{ status }}</p>
           </div>
           <div class="card-action">
             <a href="#">This is a link</a>
