--- a/client/partials/Header.html
+++ b/client/partials/Header.html
@@ -3,7 +3,7 @@
     <nav>
       <div class="nav-wrapper">
         <div class="container">
-          <a class="brand-logo" href="/">Nomadify</a>
+          <a class="brand-logo" href="/restaurants">Nomadify</a>
 
           <ul class="right">
             <li>
