--- a/client/partials/Header.html
+++ b/client/partials/Header.html
@@ -1,7 +1,7 @@
 <template name='Header'>
   <header>
     <nav>
-      <div class="nav-wrapper">
+      <div class="nav-wrapper blue-grey">
         <div class="container">
           <a class="brand-logo" href="/">Nomadify</a>
 
