--- a/client/components/Restaurant.html
+++ b/client/components/Restaurant.html
@@ -1,15 +1,27 @@
 <template name="Restaurant">
   <div class="restaurant">
-    <div class="card blue-grey darken-1">
+    <div class="card">
       <a href="{{pathFor '/restaurants/:id/waiting-list' id=_id}}">
-        <div class="card-content white-text">
+        <div class="card-content black-text">
           <span class="card-title">{{name}}</span>
-          <p>I am a very simple card. I am good at containing small bits of information.
-          I am convenient because I require little markup to use effectively.</p>
+          <table>
+            <th><i class="material-icons">supervisor_account</i></th>
+            <th><i class="material-icons">supervisor_account</i></th>
+            <th><i class="material-icons">supervisor_account</i></th>
+            <tr>
+              <td>10</td>
+              <td>10</td>
+              <td>10</td>
+            </tr>
+          </table>
         </div>
-       </a> 
+        <div class="card-reveal">
+          <span class="card-title grey-text text-darken-4">{{name}}<i class="material-icons right">close</i></span>
+          <p>Here is some more information about this product that is only revealed once clicked on.</p>
+        </div>
+       </a>
       <div class="card-action">
-        <a href="{{url}}" target="_blank">{{url}}</a>
+        <a href="{{url}}" target="_blank">Jump to Webpage</a>
       </div>
     </div>
   </div>
