change to admin

--- a/client/components/AdminCustomer.html
+++ b/client/components/AdminCustomer.html
@@ -1,5 +1,5 @@
-<template name="Customer">
-  <div class="customer">
+<template name="AdminCustomer">
+  <div class="admin-customer">
     <div class="row">
       <div class="">
         <div class="card grey lighten-5">
