--- a/client/components/AdminRestaurant.html
+++ b/client/components/AdminRestaurant.html
@@ -1,7 +1,7 @@
-<template name="Restaurant">
-  <div class="restaurant">
+<template name="AdminRestaurant">
+  <div class="admin-restaurant">
     <div class="card">
-      <a href="{{pathFor '/restaurants/:id/waiting-list' id=_id}}">
+      <a href="{{pathFor '/admin/restaurants/:id/waiting-list' id=_id}}">
         <div class="card-content black-text">
           <span class="card-title">{{name}}</span>
           <table>
