--- a/client/components/AdminWaitingList.html
+++ b/client/components/AdminWaitingList.html
@@ -1,5 +1,5 @@
-<template name="WaitingList">
-  <div class="waiting-list">
+<template name="AdminWaitingList">
+  <div class="admin-waiting-list">
     <div class="new-customer-box">
       <h2>お客様情報</h2>
       {{> quickForm collection="Customers" id="insertCustomerForm" type="insert" class="new-customer-form" options="allowed"}}
@@ -7,7 +7,7 @@
     <div>
       <h2>Waiting List</h2>
       {{#each customers}}
-        {{> Customer}}
+        {{> AdminCustomer}}
       {{/each}}
     </div>
   </div>
