--- a/client/styles/style.scss
+++ b/client/styles/style.scss
@@ -22,7 +22,7 @@ main {
     font-size: 24px;
     text-align: center;
   }
-  .sign-in, .sign-up, .restaurant-sign-up, .restaurants, .waiting-list {
+  .sign-in, .sign-up, .restaurant-sign-up, .admin-restaurants, .admin-waiting-list {
     width: 30%;
     margin: auto;
   }
