--- a/client/components/Restaurants/Restaurants.html
+++ b/client/components/Restaurants/Restaurants.html
@@ -1,6 +1,9 @@
 <template name="Restaurants">
   <div class="restaurants">
     <h2>Restaurants</h2>
+    <div class="search">
+      <input type="text" id="q" placeholder="Search" value=""/>
+    </div>
     {{#if Template.subscriptionsReady}}
       {{#each restaurants}}
         {{> Restaurant}}
