--- a/client/styles/style.scss
+++ b/client/styles/style.scss
@@ -23,7 +23,7 @@ main {
     text-align: center;
   }
   .sign-in, .sign-up, .restaurant-sign-up, .admin-restaurants, .admin-waiting-list,
-  .restaurant, .waiting-list {
+  .restaurant, .waiting-list, .search {
     width: 30%;
     margin: auto;
   }
