--- a/client/partials/Header.html
+++ b/client/partials/Header.html
@@ -26,6 +26,7 @@
 
           <ul id="user-dropdown" class="dropdown-content">
             {{#if currentUser}}
+              <li><a href="/restaurant-sign-up">Add Restaurant</a></li>
               <li><a href="#" class="logout" data-action="logout">Sign Out</a></li>
             {{else}}
               <li><a href="/sign-in">Sign in</a></li>
