--- a/client/components/Customer/Customer.html
+++ b/client/components/Customer/Customer.html
@@ -3,11 +3,19 @@
     <div class="row">
       <div class="card grey lighten-5">
         <div class="card-content black-text">
-          <span class="card-title">{{ name }}</span>
+          <span class="card-title activator">{{ name }}<i class="material-icons right">more_vert</i></span>
           <ul>
             <li><p>{{ numberOfPeople }}人</p></li>
             <li><p style="float:right"><i class="material-icons">person_pin</i>{{ status }}</p></li>
           </ul>
+        </div>
+        <div class="card-reveal">
+          <span class="card-title grey-text text-darken-4 activator">{{ name }}<i class="material-icons right">close</i></span>
+          <div class="card-action">
+            <label for="enteredNum">What's your number?</label>
+            <input type="number" id="enteredNum" />
+            <a href="#" class="cancel-waiting">Get off from waiting line</a>
+          </div>
         </div>
       </div>
     </div>
