--- a/client/components/AdminRestaurant/AdminRestaurant.html
+++ b/client/components/AdminRestaurant/AdminRestaurant.html
@@ -4,14 +4,15 @@
       <a href="{{pathFor '/admin/restaurants/:id/waiting-list' id=_id}}">
         <div class="card-content black-text">
           <span class="card-title">{{name}}</span>
+          <a style="float:right" href="{{ pathFor '/admin/restaurant/:id/dashboard' id=_id }}"><i class="material-icons">dashboard</i></a>
           <table>
-            <th><i class="material-icons">supervisor_account</i></th>
-            <th><i class="material-icons">supervisor_account</i></th>
-            <th><i class="material-icons">supervisor_account</i></th>
             <tr>
-              <td>10</td>
-              <td>10</td>
-              <td>10</td>
+              <th class="restaurantTb"><h3>10</h3></th>
+              <th class="restaurantTb"><h3>10</h3></th>
+            </tr>
+            <tr>
+              <td class="restaurantTb">people are waiting.</td>
+              <td class="restaurantTb">min.</td>
             </tr>
           </table>
         </div>
