--- a/client/layouts/MainLayout.html
+++ b/client/layouts/MainLayout.html
@@ -1,6 +1,8 @@
 <template name="MainLayout">
   {{> Header}}
-  <main>
-    {{> Template.dynamic template=main}}
-  </main>
+  <div class="container">
+    <main>
+      {{> Template.dynamic template=main}}
+    </main>
+  </div>
 </template>
