--- a/client/components/Customer/Customer.html
+++ b/client/components/Customer/Customer.html
@@ -1,20 +1,25 @@
 <template name="Customer">
   <div class="customer">
     <div class="row">
-      <div class="card grey lighten-5">
+      <div class="card grey lighten-5 hoverable">
         <div class="card-content black-text">
-          <span class="card-title activator">{{ name }}<i class="material-icons right">more_vert</i></span>
+          <div class="right">
+            <a class="btn-floating btn-small waves-effect waves-light red activator"><i class="small material-icons">delete</i></a>
+          </div>
+          <span class="card-title">{{ name }}</span>
           <ul>
             <li><p>{{ numberOfPeople }}人</p></li>
             <li><p style="float:right"><i class="material-icons">person_pin</i>{{ status }}</p></li>
           </ul>
         </div>
         <div class="card-reveal">
-          <span class="card-title grey-text text-darken-4 activator">{{ name }}<i class="material-icons right">close</i></span>
+          <span class="card-title grey-text text-darken-4 activator">Remove this list?<i class="material-icons right">close</i></span>
           <div class="card-action">
             <label for="enteredNum">What's your number?</label>
             <input type="number" id="enteredNum" />
-            <a href="#" class="cancel-waiting">Get off from waiting line</a>
+            <button class="btn waves-effect waves-light cancel-waiting" type="submit" name="action">Remove
+              <i class="material-icons right">delete</i>
+            </button>
           </div>
         </div>
       </div>
