--- a/client/partials/Header.html
+++ b/client/partials/Header.html
@@ -1,40 +1,37 @@
 <template name='Header'>
   <header>
-    <nav>
-      <div class="nav-wrapper blue-grey">
-        <div class="container">
-          <a class="brand-logo" href="/admin/restaurants">Nomadify</a>
-
-          <ul class="right">
-            <li>
-              <a class="dropdown-button" href="#!" data-activates="user-dropdown">
-                {{#if currentUser}}
-                  {{#if pictureExist}}
-                  <ul>
-                    <li><img src="{{userProfile.picture}}"/></li>
-                    <li>{{userProfile.name}}</li>
-                  </ul>
-                  {{else}}
-                    <i class="material-icons">assignment_ind</i>
-                  {{/if}}
+    <nav class="top-nav">
+      <div class="container">
+        <ul class="right">
+          <li>
+            <a class="dropdown-button" href="#!" data-activates="user-dropdown">
+              {{#if currentUser}}
+                {{#if pictureExist}}
+                <ul>
+                  <li><img src="{{userProfile.picture}}"/></li>
+                  <li>{{userProfile.name}}</li>
+                </ul>
                 {{else}}
                   <i class="material-icons">assignment_ind</i>
                 {{/if}}
-              </a>
-            </li>
-          </ul>
+              {{else}}
+                <i class="material-icons">assignment_ind</i>
+              {{/if}}
+            </a>
+          </li>
+        </ul>
 
-          <ul id="user-dropdown" class="dropdown-content">
-            {{#if currentUser}}
-              <li><a href="/restaurant-sign-up">Add Restaurant</a></li>
-              <li><a href="#" class="logout" data-action="logout">Sign Out</a></li>
-            {{else}}
-              <li><a href="/sign-in">Sign in</a></li>
-              <li><a href="/sign-up">Register</a></li>
-            {{/if}}
-          </ul>
-        </div>
+        <ul id="user-dropdown" class="dropdown-content">
+          {{#if currentUser}}
+            <li><a href="/restaurant-sign-up">Add Restaurant</a></li>
+            <li><a href="#" class="logout" data-action="logout">Sign Out</a></li>
+          {{else}}
+            <li><a href="/sign-in">Sign in</a></li>
+            <li><a href="/sign-up">Register</a></li>
+          {{/if}}
+        </ul>
       </div>
     </nav>
+    {{> SideNav}}
   </header>
 </template>
