--- a/client/styles/style.scss
+++ b/client/styles/style.scss
@@ -20,13 +20,12 @@ header {
 main {
   h2 {
     font-size: 24px;
-    text-align: center;
   }
-  .sign-in, .sign-up, .restaurant-sign-up, .admin-restaurants, .admin-waiting-list,
-  .restaurant, .waiting-list, .search {
-    width: 30%;
-    margin: auto;
-  }
+  // .sign-in, .sign-up, .restaurant-sign-up, .admin-restaurants, .admin-waiting-list,
+  // .restaurant, .waiting-list, .search {
+  //   width: 30%;
+  //   margin: auto;
+  // }
   .restaurantTb {
     width: 50%;
     text-align: center !important;
