--- a/client/components/AdminRestaurantDashboard/AdminRestaurantDashboard.html
+++ b/client/components/AdminRestaurantDashboard/AdminRestaurantDashboard.html
@@ -1,8 +1,12 @@
 <template name="AdminRestaurantDashboard">
-  <div class="admin-restaurant-dashboard">
-    {{#with restaurant}}
-      <h2>{{ name }}</h2>
-    {{/with}}
-    {{> highchartsHelper chartId="test" chartWidth="100%" charHeight="100%" chartObject=topGenresChart}}
+  <div class="container">
+    <div class="row">
+      <div class="admin-restaurant-dashboard">
+        {{#with restaurant}}
+          <h2>{{ name }}</h2>
+        {{/with}}
+        {{> highchartsHelper chartId="test" chartWidth="100%" charHeight="100%" chartObject=topGenresChart}}
+      </div>
+    </div>
   </div>
 </template>
