--- a/client/components/AdminWaitingList/AdminWaitingList.html
+++ b/client/components/AdminWaitingList/AdminWaitingList.html
@@ -1,14 +1,18 @@
 <template name="AdminWaitingList">
-  <div class="admin-waiting-list">
-    <div class="new-customer-box">
-      <h2>お客様情報</h2>
-      {{> quickForm collection="Customers" id="insertCustomerForm" type="insert" class="new-customer-form" options="allowed"}}
-    </div>
-    <div>
-      <h2>Waiting List</h2>
-      {{#each customers}}
-        {{> AdminCustomer}}
-      {{/each}}
+  <div class="container">
+    <div class="row">
+      <div class="admin-waiting-list">
+        <div class="new-customer-box">
+          <h2>お客様情報</h2>
+          {{> quickForm collection="Customers" id="insertCustomerForm" type="insert" class="new-customer-form" options="allowed"}}
+        </div>
+        <div>
+          <h2>Waiting List</h2>
+          {{#each customers}}
+            {{> AdminCustomer}}
+          {{/each}}
+        </div>
+      </div>
     </div>
   </div>
 </template>
