--- a/client/components/Customer/Customer.html
+++ b/client/components/Customer/Customer.html
@@ -17,7 +17,7 @@
           <div class="card-action">
             <label for="enteredNum">What's your number?</label>
             <input type="number" id="enteredNum" />
-            <button class="btn waves-effect waves-light cancel-waiting" type="submit" name="action">Remove
+            <button class="btn waves-effect waves-light cancel-waiting red" type="submit" name="action">Remove
               <i class="material-icons right">delete</i>
             </button>
           </div>
