--- a/client/partials/Header.html
+++ b/client/partials/Header.html
@@ -1,6 +1,6 @@
 <template name='Header'>
   <header>
-    <nav class="top-nav">
+    <nav class="top-nav brown">
       <div class="container">
         <ul class="right">
           <li>
