--- a/client/components/SignIn/SignIn.html
+++ b/client/components/SignIn/SignIn.html
@@ -1,5 +1,9 @@
 <template name="SignIn">
-  <div class="sign-in">
-    {{> atForm state='signIn'}}
+  <div class="container">
+    <div class="row">
+      <div class="sign-in">
+        {{> atForm state='signIn'}}
+      </div>
+    </div>
   </div>
 </template>
