--- a/client/components/SignUp/SignUp.html
+++ b/client/components/SignUp/SignUp.html
@@ -1,5 +1,9 @@
 <template name="SignUp">
-  <div class="sign-up">
-    {{> atForm state='signUp'}}
+  <div class="container">
+    <div class="row">
+      <div class="sign-up">
+        {{> atForm state='signUp'}}
+      </div>
+    </div>
   </div>
 </template>
