--- a/client/layouts/HomeLayout.html
+++ b/client/layouts/HomeLayout.html
@@ -1,8 +1,12 @@
 <template name="HomeLayout">
   {{> Header}}
   <main>
-    <div class="billboard">
-      <h2>待つことができない人へのNomadoな選択肢</h2>
+    <div class="container">
+      <div class="row">
+        <div class="billboard col s12 m9">
+          <h2>待つことができない人へのNomadoな選択肢</h2>
+        </div>
+      </div>
     </div>
   </main>
 </template>
