--- a/client/components/AdminCustomer/AdminCustomer.html
+++ b/client/components/AdminCustomer/AdminCustomer.html
@@ -4,7 +4,7 @@
       <div class="">
         <div class="card grey lighten-5">
           <div class="card-content black-text">
-            <span class="card-title">{{ name }}</span>
+            <span class="card-title">{{ name }}<a style="float:right" id="check" class="waves-effect waves-light btn">Check!</a></span>
             <ul>
               <li><p>{{ numberOfPeople }}人</p></li>
               <li><p style="float:right"><i class="material-icons">person_pin</i>{{ status }}</p></li>
