--- a/client/layouts/HomeLayout.html
+++ b/client/layouts/HomeLayout.html
@@ -3,7 +3,7 @@
   <main>
     <div class="container">
       <div class="row">
-        <div class="billboard col s12 m9">
+        <div class="billboard">
           <h2>待つことができない人へのNomadoな選択肢</h2>
         </div>
       </div>
