--- a/client/partials/Header.html
+++ b/client/partials/Header.html
@@ -1,6 +1,6 @@
 <template name='Header'>
   <header>
-    <nav class="top-nav brown">
+    <nav class="top-nav blue-grey">
       <div class="container">
         <ul class="right">
           <li>
@@ -12,10 +12,10 @@
                   <li>{{userProfile.name}}</li>
                 </ul>
                 {{else}}
-                  <i class="material-icons">assignment_ind</i>
+                  <i class="material-icons small">assignment_ind</i>
                 {{/if}}
               {{else}}
-                <i class="material-icons">assignment_ind</i>
+                <i class="material-icons small">assignment_ind</i>
               {{/if}}
             </a>
           </li>
