--- a/client/partials/SideNav.html
+++ b/client/partials/SideNav.html
@@ -1,6 +1,6 @@
 <template name="SideNav">
   <ul id="nav-mobile" class="side-nav fixed" style="width: 240px;">
-    <li class="logo"><a class="brand-logo" href="/admin/restaurants"><h1>Nomadify</h1></a></li>
+    <li class="logo"><a class="brand-logo" href="/"><h1>Nomadify</h1></a></li>
     <li><a href="#!">First Sidebar Link</a></li>
     <li><a href="#!">Second Sidebar Link</a></li>
   </ul>
