--- a/client/components/AdminWaitingList/AdminWaitingList.html
+++ b/client/components/AdminWaitingList/AdminWaitingList.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="admin-waiting-list">
         <div class="new-customer-box">
-          <h2>お客様情報</h2>
+          <h2>Customer Form</h2>
           {{> quickForm collection="Customers" id="insertCustomerForm" type="insert" class="new-customer-form" options="allowed"}}
         </div>
         <div>
