--- a/client/partials/Header.html
+++ b/client/partials/Header.html
@@ -5,17 +5,19 @@
         <ul class="right">
           <li>
             <a class="dropdown-button" href="#!" data-activates="user-dropdown">
-              {{#if currentUser}}
-                {{#if pictureExist}}
-                <ul>
-                  <li><img class="responsive-img" src="{{userProfile.picture}}"/></li>
-                  <li>{{userProfile.name}}</li>
-                </ul>
+              {{#if admin}}
+                {{#if currentUser}}
+                  {{#if pictureExist}}
+                  <ul>
+                    <li><img class="responsive-img" src="{{userProfile.picture}}"/></li>
+                    <li>{{userProfile.name}}</li>
+                  </ul>
+                  {{else}}
+                    <i class="material-icons small">assignment_ind</i>
+                  {{/if}}
                 {{else}}
                   <i class="material-icons small">assignment_ind</i>
                 {{/if}}
-              {{else}}
-                <i class="material-icons small">assignment_ind</i>
               {{/if}}
             </a>
           </li>
