--- a/client/components/AdminRestaurant/AdminRestaurant.html
+++ b/client/components/AdminRestaurant/AdminRestaurant.html
@@ -9,10 +9,10 @@
         <table>
           <tr>
             <th class="restaurantTb"><h3>{{waitingCustomerNum}}</h3></th>
-            <th class="restaurantTb"><h3>{{avgWaitingTime}}</h3></th>
+            <th class="restaurantTb"><h3>{{WaitingTime}}</h3></th>
           </tr>
           <tr>
-            <td class="restaurantTb">people are waiting.</td>
+            <td class="restaurantTb">people are waiting</td>
             <td class="restaurantTb">min.</td>
           </tr>
         </table>
