--- a/client/components/Restaurants/Restaurants.html
+++ b/client/components/Restaurants/Restaurants.html
@@ -3,9 +3,17 @@
     <div class="row">
       <div class="restaurants">
         <h2>Restaurants</h2>
-        <div class="search">
-          <input type="text" id="q" placeholder="Search" value=""/>
-        </div>
+        <nav class="red">
+          <div class="nav-wrapper">
+            <form>
+              <div class="input-field">
+                <input id="search" type="search" required>
+                <label for="search"><i class="material-icons">search</i></label>
+                <i class="material-icons">close</i>
+              </div>
+            </form>
+          </div>
+        </nav>
         {{#if Template.subscriptionsReady}}
           {{#each restaurants}}
             {{> Restaurant}}
