--- a/client/components/SignUp/SignUp.html
+++ b/client/components/SignUp/SignUp.html
@@ -2,7 +2,12 @@
   <div class="container">
     <div class="row">
       <div class="sign-up">
-        {{> atForm state='signUp'}}
+        <div class="card">
+          <div class="card-content black-text">
+            {{> atForm state='signUp'}}
+          </div>
+        </div>
+
       </div>
     </div>
   </div>
