--- a/client/layouts/HomeLayout.html
+++ b/client/layouts/HomeLayout.html
@@ -4,7 +4,29 @@
     <main>
       <div class="container">
         <div class="row">
-          <h2>待つことができない人へのNomadoな選択肢</h2>
+          <div class="card">
+            <div class="card-content black-text">
+              <center>
+                <span class="card-title">待つことができない人へのNomadoな選択肢</span>
+              </center>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-content black-text" style="height:250px;">
+
+              <div style="float:left;width:50%;text-align:center;">
+                <h2>Customer</h2>
+                <a class="waves-effect waves-light btn-large goRestaurants"><i class="material-icons left">search</i>Search The Store</a>
+              </div>
+
+              <div style="float:right;width:50%;text-align:center;">
+                <h2>Manager</h2>
+                <a class="waves-effect waves-light btn-large goSignIn"><i class="material-icons left">perm_identity</i>Sign In</a>
+                <a class="waves-effect waves-light btn-large goSignUp"><i class="material-icons left">perm_identity</i>Sign Up</a>
+              </div>
+
+            </div>
+          </div>
         </div>
       </div>
     </main>
