--- a/client/components/Customer/Customer.html
+++ b/client/components/Customer/Customer.html
@@ -2,9 +2,9 @@
   <div class="customer">
     <div class="row">
       <div class="card grey lighten-5 hoverable">
-        <div class="card-content black-text">
+        <div class="card-content black-text" id="{{ _id }}" style="height:auto">
           <div class="right">
-            <a class="btn-floating btn-small waves-effect waves-light red activator"><i class="small material-icons">delete</i></a>
+            <a class="btn-floating btn-small waves-effect waves-light red activator"><i class="small material-icons delete-btn" id="{{ _id }}">delete</i></a>
           </div>
           <span class="card-title">{{ name }}</span>
           <ul>
@@ -13,11 +13,11 @@
           </ul>
         </div>
         <div class="card-reveal">
-          <span class="card-title grey-text text-darken-4 activator">Remove this list?<i class="material-icons right">close</i></span>
+          <span class="card-title grey-text text-darken-4 activator close-btn">Remove this list?<i class="material-icons right close-btn">close</i></span>
           <div class="card-action">
             <label for="enteredNum">What's your number?</label>
-            <input type="number" id="enteredNum" />
-            <button class="btn waves-effect waves-light cancel-waiting red" type="submit" name="action">Remove
+            <input type="number" id="{{ _id }}" />
+            <button id="{{ _id }}" class="btn waves-effect waves-light cancel-waiting red" type="submit" name="action">Remove
               <i class="material-icons right">delete</i>
             </button>
           </div>
