--- a/client/components/Restaurant/Restaurant.html
+++ b/client/components/Restaurant/Restaurant.html
@@ -10,11 +10,11 @@
         <span class="card-title">{{name}}</span>
         <table>
           <tr>
-            <th class="restaurantTb"><h3>10</h3></th>
-            <th class="restaurantTb"><h3>10</h3></th>
+            <th class="restaurantTb"><h3>{{waitingCustomerNum}}</h3></th>
+            <th class="restaurantTb"><h3>{{WaitingTime}}</h3></th>
           </tr>
           <tr>
-            <td class="restaurantTb">people are waiting.</td>
+            <td class="restaurantTb">people are waiting</td>
             <td class="restaurantTb">min.</td>
           </tr>
         </table>
