--- a/client/components/SignIn/SignIn.html
+++ b/client/components/SignIn/SignIn.html
@@ -2,7 +2,11 @@
   <div class="container">
     <div class="row">
       <div class="sign-in">
-        {{> atForm state='signIn'}}
+        <div class="card">
+          <div class="card-content black-text">
+            {{> atForm state='signIn'}}
+          </div>
+        </div>
       </div>
     </div>
   </div>
