--- a/client/components/WaitingList/WaitingList.html
+++ b/client/components/WaitingList/WaitingList.html
@@ -1,8 +1,14 @@
 <template name="WaitingList">
   <div class="container">
     <div class="row">
-      <h2>Sign up for Waiting List!</h2>
-      <div class="card grey lighten-5 hoverable">
+        <h2 style="float:left;">Sign up for Waiting List!</h2>
+        <div class="restaurant-status" style="float:right;vertical-align:bottom;">
+          <i class="material-icons">supervisor_account</i>
+          <a class="btn-floating btn-large waves-effect waves-light red"><span style="font-size:18px;">{{ waitingCustomerNum }}</span></a>
+          <i class="material-icons">av_timer</i>
+          <a class="btn-floating btn-large waves-effect waves-light red"><span style="font-size:18px;">{{ WaitingTime }}</span></a>
+        </div>
+      <div class="card grey lighten-5 hoverable" style="clear:both;">
         <div class="card-content black-text">
           <div class="new-customer-box">
             <span class="card-title activator"></span>
