--- a/client/partials/Header.html
+++ b/client/partials/Header.html
@@ -1,5 +1,62 @@
 <template name='Header'>
   <header>
+    <nav>
+      <div class="nav-wrapper" style="width:80%;margin:auto;">
+        <a href="#" data-activates="menu" class="button-collapse"><i class="material-icons">menu</i></a>
+        <a href="/" class="brand-logo">Nomadify</a>
+        <ul class="side-nav"  id="menu">
+          {{#if currentUser}}
+            <li><a href="/admin/restaurants">Restaurants</a></li>
+            <li><a href="/restaurants">Customer Page</a></li>
+            <li><a href="/add-restaurant">Add Restaurant</a></li>
+            <li><a href="#" class="logout" data-action="logout">Sign Out</a></li>
+          {{ else }}
+            <li><a href="/restaurants">Restaurants</a></li>
+          {{/if}}
+        </ul>
+
+        <ul class="right hide-on-med-and-down">
+          {{#if currentUser}}
+            <li><a href="/admin/restaurants">Restaurants</a></li>
+            <li><a href="/restaurants">Customer Page</a></li>
+          {{else}}
+            <li><a href="/restaurants">Restaurants</a></li>
+          {{/if}}
+
+          <li>
+            {{#if currentUser}}
+              <li>
+                <a class="dropdown-button" href="" data-activates="user-dropdown">
+                  {{#if pictureExist}}
+                  <ul>
+                    <li><img class="responsive-img" src="{{userProfile.picture}}"/></li>
+                    <li>{{userProfile.name}}</li>
+                  </ul>
+                  {{else}}
+                    <ul>
+                      <li><i class="material-icons small">assignment_ind</i></li>
+                    </ul>
+                  {{/if}}
+                </a>
+              </li>
+            {{/if}}
+          </li>
+        </ul>
+
+        <ul id="user-dropdown" class="dropdown-content">
+          {{#if currentUser}}
+            <li><a href="/add-restaurant">Add Restaurant</a></li>
+            <li><a href="#" class="logout" data-action="logout">Sign Out</a></li>
+          {{/if}}
+        </ul>
+      </div>
+    </nav>
+  </header>
+</template>
+
+
+<!-- <template name='Header'>
+  <header>
     <nav class="top-nav orange">
       <div class="container">
         <ul class="right">
@@ -25,7 +82,7 @@
 
         <ul id="user-dropdown" class="dropdown-content">
           {{#if currentUser}}
-            <li><a href="/restaurant-sign-up">Add Restaurant</a></li>
+            <li><a href="/add-restaurant">Add Restaurant</a></li>
             <li><a href="#" class="logout" data-action="logout">Sign Out</a></li>
           {{else}}
             <li><a href="/sign-in">Sign in</a></li>
@@ -36,4 +93,4 @@
     </nav>
     {{> SideNav}}
   </header>
-</template>
+</template> -->
