--- a/client/components/AdminRestaurants/AdminRestaurants.html
+++ b/client/components/AdminRestaurants/AdminRestaurants.html
@@ -7,6 +7,10 @@
           {{#each restaurants}}
             {{> AdminRestaurant}}
           {{/each}}
+        {{ else }}
+          <div style="text-align:center;">
+            {{> Loading }}
+          </div>
         {{/if}}
       </div>
     </div>
