--- a/client/components/Customer/Customer.html
+++ b/client/components/Customer/Customer.html
@@ -16,7 +16,7 @@
           <span class="card-title grey-text text-darken-4 activator close-btn">Remove this list?<i class="material-icons right close-btn">close</i></span>
           <div class="card-action">
             <label for="enteredNum">What's your number?</label>
-            <input type="number" id="{{ _id }}" />
+            <input type="number" class="{{ _id }}" />
             <button id="{{ _id }}" class="btn waves-effect waves-light cancel-waiting red" type="submit" name="action">Remove
               <i class="material-icons right">delete</i>
             </button>
