--- a/client/components/AdminWaitingList/AdminWaitingList.html
+++ b/client/components/AdminWaitingList/AdminWaitingList.html
@@ -2,15 +2,15 @@
   <div class="container">
     <div class="row">
       <div class="admin-waiting-list">
-        <div class="new-customer-box">
-          <h2 style="float:left;">Customer Form</h2>
+        <div class="new-customer-box" style="margin-top:30px;">
           <div class="restaurant-status" style="float:right;vertical-align:bottom;">
             <i class="material-icons">supervisor_account</i>
             <a class="btn-floating btn-large waves-effect waves-light red"><span style="font-size:18px;">{{ waitingCustomerNum }}</span></a>
             <i class="material-icons">av_timer</i>
             <a class="btn-floating btn-large waves-effect waves-light red"><span style="font-size:18px;">{{ WaitingTime }}</span></a>
           </div>
-          <div class="card grey lighten-5 hoverable" style="clear:both;">
+          <a class="waves-effect waves-light btn toggleForm"><i class="material-icons left">add</i>Customer</a>
+          <div class="card grey lighten-5 hoverable customerForm" style="clear:both;display:none;">
             <div class="card-content black-text">
               <div class="new-customer-box">
                 <span class="card-title activator"></span>
@@ -19,7 +19,7 @@
             </div>
           </div>
         </div>
-        <div>
+        <div style="clear:both">
           <h2>Waiting List</h2>
           {{#each customers}}
             {{> AdminCustomer}}
