--- a/client/components/Restaurants/Restaurants.html
+++ b/client/components/Restaurants/Restaurants.html
@@ -18,6 +18,10 @@
           {{#each restaurants}}
             {{> Restaurant}}
           {{/each}}
+        {{ else }}
+          <div style="text-align:center;">
+            {{> Loading }}
+          </div>
         {{/if}}
       </div>
     </div>
