--- a/client/layouts/HomeLayout.html
+++ b/client/layouts/HomeLayout.html
@@ -12,17 +12,18 @@
             </div>
           </div>
           <div class="card">
-            <div class="card-content black-text" style="height:250px;">
+            <div class="card-content black-text">
 
-              <div style="float:left;width:50%;text-align:center;">
+              <div style="text-align:center;">
                 <h2>Customer</h2>
-                <a class="waves-effect waves-light btn-large goRestaurants"><i class="material-icons left">search</i>Search The Store</a>
+                <a class="waves-effect waves-light btn goRestaurants"><i class="material-icons left">search</i>Search Restaurants</a>
               </div>
 
-              <div style="float:right;width:50%;text-align:center;">
+              <div style="text-align:center;">
                 <h2>Manager</h2>
-                <a class="waves-effect waves-light btn-large goSignIn"><i class="material-icons left">perm_identity</i>Sign In</a>
-                <a class="waves-effect waves-light btn-large goSignUp"><i class="material-icons left">perm_identity</i>Sign Up</a>
+                <a class="waves-effect waves-light btn goSignIn"><i class="material-icons left">perm_identity</i>Sign In</a>
+                or
+                <a class="waves-effect waves-light btn goSignUp"><i class="material-icons left">perm_identity</i>Sign Up</a>
               </div>
 
             </div>
