--- a/client/partials/Header.html
+++ b/client/partials/Header.html
@@ -1,6 +1,6 @@
 <template name='Header'>
   <header>
-    <nav>
+    <nav class="orange">
       <div class="nav-wrapper" style="width:80%;margin:auto;">
         <a href="#" data-activates="menu" class="button-collapse"><i class="material-icons">menu</i></a>
         <a href="/" class="brand-logo">Nomadify</a>
