--- a/client/components/AdminWaitingList/AdminWaitingList.html
+++ b/client/components/AdminWaitingList/AdminWaitingList.html
@@ -4,12 +4,15 @@
       <div class="admin-waiting-list">
         <div class="new-customer-box" style="margin-top:30px;">
           <div class="restaurant-status" style="float:right;vertical-align:bottom;">
+            <a class="btn-floating btn-large waves-effect waves-light orange" href="{{pathFor '/restaurants/:id/waiting-list' id=restaurantId}}">
+              <i class="material-icons left">view_list</i>
+            </a>
+            <a class="btn-floating btn-large waves-effect waves-light red toggleForm"><i class="material-icons left">add</i></a>
             <i class="material-icons">supervisor_account</i>
             <a class="btn-floating btn-large waves-effect waves-light red"><span style="font-size:18px;">{{ waitingCustomerNum }}</span></a>
             <i class="material-icons">av_timer</i>
             <a class="btn-floating btn-large waves-effect waves-light red"><span style="font-size:18px;">{{ WaitingTime }}</span></a>
           </div>
-          <a class="waves-effect waves-light btn toggleForm"><i class="material-icons left">add</i>Customer</a>
           <div class="card grey lighten-5 hoverable customerForm" style="clear:both;display:none;">
             <div class="card-content black-text">
               <div class="new-customer-box">
